app/assets/stylesheets/all.css.scss
@import 'foundation';

li {
	list-style-type:none;
}

label {
	font-weight: bold;
}

.field_with_errors {
	margin-bottom: 0;
}

.field_with_errors input, .field_with_errors textarea {
	border: 1px solid red;
}

div .errors {
	color: red;
}

#question_button, #sub_question_button, #answer_button, #sub_answer_button, #subtype_button, #support_button, #oppose_button, #cancel_button {
  @extend .button;
  @extend .small;
  @extend .expand;
 }

$black-color:#000;
$light-black-color:#444;
$grey-color:#666;
$light-grey-color:#888;


#question_button, #sub_question_button {
	background-color:#000;
}

#question_button:hover, #sub_question_button:hover {
	background-color:#444;
}

#answer_button, #sub_answer_button {
	background-color:#666;
}

#answer_button:hover, #sub_answer_button:hover {
	background-color:#888;
}

#subtype_button {
	@extend .primary;
}

#support_button {
	@extend .success;
}

#oppose_button {
	@extend .alert;
}

#cancel_button {
	@extend .secondary;
}

#question, #subtype, .subtype, #answer, .answer, #support, .support, #oppose, .oppose {
	@extend .panel;
	padding-bottom:0;
}

.form {
	@extend .panel;
}

#question, #subtype, .subtype, #answer, .answer, #support, .support, #oppose, .oppose {
	// Additional spacing for when book-ended by absolutely positioned color strips (10px wide)
	padding-left:30px;
	padding-right:30px;
}

.question p.empty {
	margin-bottom:0;
}

#subtype, #question, #answer, #support, #oppose {
	@extend .callout;
}

.subtype, .question, .answer, .support, .oppose {
	margin-right:24px;
}

.form {
	//margin-left:24px;
	//margin-right:24px;
	
	margin-left:11px;
	margin-top:-2px;
	margin-bottom:2px;
}

div #subtype, .subtype, #question, .question, #answer, .answer, #support, .support, #oppose, .oppose {
	position:relative;
}

div .branch_body_text {
	position:relative;
	padding-top:0px;
}

div.actions {
	position:absolute;
	right:5px;
	top:-4px;
}

.actions a {
  font-size:75%;
}

.full_node div.actions {
	right:15px;
}

.color_question, .color_answer, .color_subtype, .color_support, .color_oppose, .color_new_node {
	position:absolute;
	left:1px;
	top:1px;
	bottom:1px;
	width:10px;
	
	color: white;
	text-align: center;
}

.root_color_question, .root_color_answer, .root_color_support, .root_color_oppose, .root_color_new_node {
	position:absolute;
	right:1px;
	top:1px;
	bottom:1px;
	width:10px;
	
	color: white;
	text-align: center;
}

.color_question, .root_color_question {
	background-color:$black-color;
}

.color_answer, .root_color_answer {
	background-color:$grey-color;
}

.color_subtype {
	background-color:$primary-color;
}

.color_support, .root_color_support {
	background-color:$success-color;
}

.color_oppose, .root_color_oppose {
	background-color:$alert-color;
}

.color_new_node, .root_color_new_node {
	background-color:white;
}

.branch_header, .question {
	@extend .panel;
	padding: 0 27px 0 27px;
	margin-bottom:0px;
	//width:700px;
	overflow:hidden;
	//max-height:75px;
	height:27px;
	
	position:relative;
}

div.branch_body {
	position:relative;
	margin-left: 10px;
}

div.branch_body_text {
	@extend .panel;
	
	border-top:0;
	margin-left:12px;
	margin-bottom:1px;
	
	//background-color:white;
}

$arrow-color:white;

div.branch_body .left_vertical_arrow, div.branch_body .left_horizontal_arrow {
	border-width: 1px;
	border-style: dashed;
}

.left_vertical_arrow, .left_vertical_arrow_head, .left_horizontal_arrow {
	//border-color: $arrow-color;
}

.question_arrow { border-color:$black-color;		color:$black-color;		}
.answer_arrow 	{ border-color:$grey-color;			color:$grey-color;		}
.subtype_arrow 	{ border-color:$primary-color;	color:$primary-color;	}
.support_arrow 	{ border-color:$success-color;	color:$success-color;	} 
.oppose_arrow 	{ border-color:$alert-color;		color:$alert-color;		} 
.new_node_arrow { border-color:white;						color:white;					} 

div.branch_body .left_vertical_arrow {
	border-top:none;
	border-right:none;
	border-bottom:none;
	
	position:absolute;
	top:0;
	bottom:13px;
}

div.branch_body .left_vertical_arrow_head {
	position:absolute;
	top:-11px;
	left:-4px;
	
	//color: $arrow-color;
}

div.left_horizontal_arrow, div.content {
}

div.branch_node .left_horizontal_arrow {
	border-left:none;
	border-top:none;
	border-right:none;
	
	height:18px;
	width:11px;
}

div.content {
	min-width:700px;
	margin-left:13px;
	margin-top:-13px;
}

div.branch_body ul {
	margin-left:0px;
}

span.body {
	margin-left:10px;
	color:grey;
}

.selected {
	@extend .branch_header;
	background-color:yellow;
	height:100%;
}

.strike {
	position: relative;
}

.strike::after {
	content:'';
	border-bottom:2px solid black;
	position:absolute;
	left:0;
	top:50%;
	width:100%;
}

